# htcw_frame

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties
examples/demo/: CMakeLists.txt  EspSerialSession.cs  Program.cs  SerialFrameDemo.csproj  buffers_extra.py  buffers_gen_c.py  buffers_gen_cs.py  platformio.ini
examples/demo/esp-idf/: main.c
examples/demo/src/: main.c  main.cpp
src/: frame.h
src/source/: frame.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
